# minecraft-wiki-assistant

./: .gitattributes  .gitignore  .gitignore~  Readme.md  _.swp  build.ps1  config.py  logging_utils.py
backend/: backend.py  rag_cli.py
data_pipeline/: 00collect_allpages.py  01get_titles_parsed.py  01xmltojson.py  02dumptoparsed.py  02parsedtochunk.py  03buildindex.py  03parsedtochunk.py
pyserver/: download_model.py  requirements.txt  server.py
tauri-app/: package-lock.json  package.json  vite.config.js
tauri-app/scripts/: strip-bom.mjs
tauri-app/src/: _thinking_shimmer_patch.css  index.html  main.js  style.css
tauri-app/src-tauri/: 2  Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
tauri-app/src/public/: titles.txt
