[package]
name = "minecraft-wiki-assistant"
version = "1.0.0"
edition = "2021"
autobins = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dxgi"] }

[[bin]]
name = "MineRAG"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"

[package.metadata.tauri]
# 空也行，只是为了让 tauri-build 不再提示 metadata 不存在
